--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,31 @@ server.port=10100
 bot.port=4396
 bot.ip=127.0.0.1
 bot.appkey=
+#\u63D2\u4EF6\u6267\u884C\u987A\u5E8F \u542F\u7528\u8868
+#\u662F\u5426\u52A0\u8F7D\u63D2\u4EF6 1\u3002\u52A0\u8F7D\u63D2\u4EF6 0.\u4E0D\u52A0\u8F7D\u63D2\u4EF6
+load.plug=1
+#\u529F\u80FD\u540D \u7528\u4E8E\u5E2E\u52A9\u548C\u6253\u5370\u663E\u793A\u529F\u80FD\u5217\u8868
+plug.data[0].name=\u590D\u8BFB\u673A
+#\u63D2\u4EF6\u7C7B\u540D
+plug.data[0].clzName=testPlugImpl
+#1 \u542F\u7528 0\u5B98\u5175
+plug.data[0].status=1
+#\u6761\u4EF6
+plug.data[0].condition=
+#\u6761\u4EF6\u7C7B\u578B 1.\u6B63\u5219 2.\u6D88\u606F\u5339\u914D\u81F3\u7A7A\u683C\u7ED3\u675F  3.\u4E0D\u542F\u7528\u89C4\u5219\uFF0C\u4E00\u76F4\u89E6\u53D1 \u6682\u65F6\u53EA\u652F\u6301 2,3
+plug.data[0].conditionType=3
+#\u4E8B\u4EF6\u7C7B\u578B
+#At
+#Contacts
+#Face
+#File
+#Image
+#MusicShare
+#Poke
+#SimpleService
+#Url
+#VipFace
+#Message \u666E\u901A\u6D88\u606F
+#All \u6216\u8005\u7A7A \u5168\u89E6\u53D1
+plug.data[0].eventList[0]=At
+plug.data[0].eventList[1]=Message
