--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,9 @@ plug.data[0].clzName=testPlugImpl
 #1 \u542F\u7528 0\u5B98\u5175
 plug.data[0].status=1
 #\u6761\u4EF6
-plug.data[0].condition=
+plug.data[0].condition=ss
 #\u6761\u4EF6\u7C7B\u578B 1.\u6B63\u5219 2.\u6D88\u606F\u5339\u914D\u81F3\u7A7A\u683C\u7ED3\u675F  3.\u4E0D\u542F\u7528\u89C4\u5219\uFF0C\u4E00\u76F4\u89E6\u53D1 \u6682\u65F6\u53EA\u652F\u6301 2,3
-plug.data[0].conditionType=3
+plug.data[0].conditionType=2
 #\u4E8B\u4EF6\u7C7B\u578B
 #At
 #Contacts
@@ -29,4 +29,3 @@ plug.data[0].conditionType=3
 #Message \u666E\u901A\u6D88\u606F
 #All \u6216\u8005\u7A7A \u5168\u89E6\u53D1
 plug.data[0].eventList[0]=At
-plug.data[0].eventList[1]=Message
